# electron-momentum-transfer

./: .gitattributes  .gitignore  AutoCompute.py  AutoOscillator.py  CMakeLists.txt  DataAnalyst  DataAnalyst.c  ErrorCalculator.c  Init.h  LaserElectron  LaserElectron.c  LaserElectron.cpp  Makefile  OutputFormatter.c  PlottingScripts.py  PondG.h  README.md  RK4.c  RK4.h  auto_compute.py  auto_slurm.sh  data_analyst.c  error_calculator.c  init.h  laser_electron.cpp  out-deriv.txt  out-file.txt  plotting_scripts.py
include/: extra.h  hc_func.h  init.h  math_tools.h  particle_push.h  ponderomotive.h  potentials.h  sim_structs.h  tools.h  units.h
input/: input.txt
scripts/: common.py  create_video.py  examples.py  plotting.py  plotting_scripts.py  programs.py  sim_init.py
src/: analytic_solution.c  conv_calc.c  data_analyst.c  error_calc.c  error_calculator.c  extra.c  extra.h  find_enter_exit_time.c  find_exit_time.c  find_final_p.c  find_final_py.c  find_max_p.c  find_max_py.c  hc_func.c  init.c  init.h  laser_electron.c  laser_electron.cpp  oscillator.c  particle_push.c  ponderomotive.c  ponderomotive.h  potentials.c  tools.c
tests/: analytic_test  analytic_test.py  performance_test.py  quick_example.py
